# CS5500_Parallel_Prog

./: cs5500.s20
ConWays/: CMakeLists.txt  a.out  main.cpp  test.h
FinalProject/: 100X100_Matrix.txt  CMakeLists.txt  Matrix.txt  Matrix_Info.cpp  Matrix_Info.h  Serialize_Deserialize_Vector.h  a.out  main.cpp  results.txt
HW10/: .clang-format  CMakeLists.txt  City.h  CostMatrixGenerator.cpp  CostMatrixGenerator.h  MakePermutationMatrix.cpp  MakePermutationMatrix.h  ParseMatrixForMPI.h  ReadFromFile.cpp  ReadFromFile.h  SerializeCities.h  input  main.cpp  partialPermutation.h
HW2/: Bomb.cpp  a.out  pachinko.cpp
HW3/: a.out  parallelSort.cpp  test.cpp
HW4/: bitonic.cpp
HW5/: a.out  main.cpp
HW7/: CMakeLists.txt  a.out  main.cpp
MakeJson/: Serialize_Deserialize_Vector.h
Mandelbrot/: gather.cpp  main.cpp
Parallel_Mandelbrot/: a.out  gather.cpp  main.cpp  scatter.cpp  seahorse.txt
example/: cubeICN.cpp  parallelRoundRobin.cpp  parallellHello.cpp  serialHello.cpp  test.cpp
example/pachinco/: a.out  pachinko.cpp
run/: a.out
testing/: CMakeLists.txt  main.cpp
untitled/: CMakeLists.txt  a.out  main.cpp
